--- a/name index.html
+++ b/name index.html
@@ -7,7 +7,8 @@
         <h1>Nishchala</h1>
         <h6>Kerala</h6>
         <p>
-            I like this place as we get to explore the place through a water body on a<b>boat</b> .And the place has unqiue food and its special for its boat race during the respective festival called <b>onam</b> .
+            I like this place as we get to explore the place through a water body on a <b>boat</b> .
+            And the place has unqiue food and its special for its boat race during the respective festival called <b>onam</b> .
         </p>
     </body>
 </html>
