--- a/name index.html
+++ b/name index.html
@@ -10,6 +10,13 @@
             I like this place as we get to explore the place through a water body on a <b>boat</b> .
             And the place has unqiue food and its special for its boat race during the respective festival called <b>onam</b> .
         </p>
+        <hr>
+        <h1>vacation spots</h1>
+        <ol>
+            <li>relaxing</li>
+            <li>exploring</li>
+            <li>trying new food</li>
+        </ol>
     </body>
 </html>
 
