--- a/name index.html
+++ b/name index.html
@@ -17,6 +17,11 @@
             <li>exploring</li>
             <li>trying new food</li>
         </ol>
+        <ul>  
+            <li>sadhya</li>
+            <li>kappa</li>
+            <li>Idiyappam</li>
+        </ul>
     </body>
 </html>
 
