--- a/name index.html
+++ b/name index.html
@@ -22,6 +22,7 @@
             <li>kappa</li>
             <li>Idiyappam</li>
         </ul>
+        <a href=“C:\Users\S564199\Documents\GitHub\44563-webapps-f23-assignment3-Nishchala03\mystats.html”> mystats</a>
     </body>
 </html>
 
