--- a/mystats.html
+++ b/mystats.html
@@ -12,6 +12,6 @@
         <p>The food is made back in the place I live.
             It got amazing flavours to the taste of the food.
         </p>
-        <img src=\images\https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-Nishchala03/blob/main/food.jpeg?raw=true >
+        <img src=food.jpeg>
     </body>
 </html>
