--- a/mystats.html
+++ b/mystats.html
@@ -12,6 +12,6 @@
         <p>The food is made back in the place I live.
             It got amazing flavours to the taste of the food.
         </p>
-        <a href=“food.jpeg”> fav food </a>
+        <img src=food.jpeg>
     </body>
 </html>
