--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>kappa</li>
             <li>Idiyappam</li>
         </ul>
-        <a href=“C:\Users\S564199\Documents\GitHub\44563-webapps-f23-assignment3-Nishchala03\mystats.html”> path to mystats </a>
+        <a href="C:\Users\S564199\Documents\GitHub\44563-webapps-f23-assignment3-Nishchala03\mystats.html"> path to mystats </a>
     </body>
 </html>
 
