--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@
             <li>Idiyappam</li>
         </ul>
         <a href="C:\Users\S564199\Documents\GitHub\44563-webapps-f23-assignment3-Nishchala03\mystats.html"> path to mystats </a>
+        <hr>
+        <h1><Table></h1>
+            <p>In this table we will discuss about few sports.</p>
+            <table>
+                <tr>
+                    <th>Sport</th>
+                    <th>Reason</th>
+                    <th>Time</th>
+                </tr>
+                <tr>
+                    <td>basketball</td>
+                    <td>good for calfs</td>
+                    <td>2hrs</td>
+                </tr>
+                <tr>
+                    <td>Tabletennis</td>
+                    <td>controlandfocus</td>
+                    <td>2hrs</td>
+                </tr>
+                    <td>badminton</td>
+                    <td>good_exercise</td>
+                    <td>2hrs</td>
+                </tr>
+            </table>
     </body>
 </html>
 
