--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
         <a href="C:\Users\S564199\Documents\GitHub\44563-webapps-f23-assignment3-Nishchala03\mystats.html"> path to mystats </a>
         <hr>
-        <h1><Table></h1>
+        <h1>Table</h1>
             <p>In this table we will discuss about few sports.</p>
             <table>
                 <tr>
