--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                     <td>2hrs</td>
                 </tr>
             </table>
+            <h1>code</h1>
+            <blockquote>https://stackoverflow.com/questions/77094178/using-placeholders-within-query-loop-blocks</blockquote>
+             <pre><a href="https://css-tricks.com/snippets/wordpress/dump-all-custom-fields/"> css snippet </a></pre>
+
     </body>
 </html>
 
