--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html>
     <head>
-        <title>html lab</title>
+        <title> index html page</title>
     </head>
     <body>
         <h1>Nishchala</h1>
