--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <h1>code</h1>
             <blockquote>https://stackoverflow.com/questions/77094178/using-placeholders-within-query-loop-blocks</blockquote>
              <pre><a href="https://css-tricks.com/snippets/wordpress/dump-all-custom-fields/"> css snippet </a></pre>
+             <a href="C:\Users\S564199\Documents\GitHub\FICTION\BONUS.html"> BONUS </a>
     </body>
 </html>
 
